# zefactor

./: README.md  boot.py  install.sh  pyproject.toml  setup.py  test.sh
test/finder/: find_scanner_test.py  finder_refactor_test.py  finder_scan_manager_test.py
test/replacer/: replacer_manager_test.py
test/transform/: transform_manager_test.py
zefactor/api/: base_checker.py  find_scanner.py  finder_core.py  match_reason.py  replace_scanner.py  test_finder_core.py
zefactor/api/finder/: finder_refactor.py
