[tool.poetry]
name = "zefactor"
version = "2.0.0"
description = ""
authors = ["Alex Ethier <aethier@gmail.com>"]
readme = "README.md"
packages = [{include = "zefactor"}]

[tool.poetry.dependencies]
python = "^3.7"
zind = "^0.1.3"
zompt = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
